--- a/poneminas/package.json
+++ b/poneminas/package.json
@@ -6,7 +6,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-flexbox-grid": "^2.1.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
